sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:15: error: not found: value indice
  setValue(indice,v)
           ^